# websocket-server

./: websocket-server.cabal
.stack-work/install/x86_64-osx/lts-8.16/8.0.2/doc/websocket-server-0.1.0.0/: LICENSE
.stack-work/install/x86_64-osx/lts-8.16/8.0.2/flag-cache/: SHA-1.6.4.2-6ZuKopcglGG4yoCGsd9koJ  attoparsec-0.13.1.0-ECR7lrm2wO64uP6OW8ZTCi  base64-bytestring-1.0.0.1-4O9TExPPz6eI82Yj7L4SIj  blaze-builder-0.4.0.2-CGB8BvrFgghHy5bLy0SFOg  case-insensitive-1.2.0.10-7eVVX59t93gCl3XctAmuil  entropy-0.3.7-GVoReSVE1cZ4Y1pKgzhBYO  hashable-1.2.6.0-3EXxoqeEgbfAKr6aGkye6x  integer-logarithms-1.0.1-IEHCuEd5sG4JjSjlx7m5JF  network-2.6.3.1-ABFtZSq90Z9BfMXNiqgBoe  scientific-0.3.4.13-2xII4ZQfmEWrTXn2dbZc3  vector-0.11.0.0-LMwQhhnXj8U3T5Bm1JFxG  websocket-server-0.1.0.0-ASEbfxZ1rJZDRNuuuycBu6  websocket-server-0.1.0.0-I7u4whFyaF5DcxUIKC3QwR  websockets-0.10.0.0-6qkd3MYda5GJcwL4h43r0z
.stack-work/install/x86_64-osx/lts-8.16/8.0.2/lib/x86_64-osx-ghc-8.0.2/: libHSwebsocket-server-0.1.0.0-I7u4whFyaF5DcxUIKC3QwR-ghc8.0.2.dylib
.stack-work/install/x86_64-osx/lts-8.16/8.0.2/lib/x86_64-osx-ghc-8.0.2/websocket-server-0.1.0.0-ASEbfxZ1rJZDRNuuuycBu6/: Lib.dyn_hi  Lib.hi
.stack-work/install/x86_64-osx/lts-8.16/8.0.2/pkgdb/: package.cache  websocket-server-0.1.0.0-I7u4whFyaF5DcxUIKC3QwR.conf
app/: Main.hs
src/: Lib.hs
